# local_rag

./: .base_image.dev.hash  .base_image.hash  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.test  README.md  dev.sh  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  processed_files.json  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  __main__.py  chat.py  constants.py  dev.py  messages.py  singletons.py  utils.py
app/entrypoints/: __init__.py  run_backend.py  run_chat.py
chroma/: chroma.sqlite3
prompts/: study_buddy.md  tutor_detect_gaps.md  tutor_generate_flashcards.md  tutor_generate_quiz.md  tutor_generate_study_plan.md  tutor_generate_summary.md  tutor_interactive_explainer.md
scripts/: check_base_rebuild.sh  rebuild_base_if_needed.dev.sh  rebuild_base_if_needed.sh
tests/: test_utils.py
