[tool.poetry]
name = "local-rag"
version = "0.1.0"
description = "Demo of a RAG using OLLAMA & DeepSeek-R1"
authors = ["Sebastian Soto M <s.m.sebastian.n@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "app"
from = "."

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^1.0.4"
rich = "^14.0.0"
sentence-transformers = "^4.0.2"
ollama = "^0.4.7"
pdfplumber = "^0.11.6"
easyocr = "^1.7.2"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.__main__:run"
